external-dns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.5
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=homelab.yekvitka.com
        - --provider=inmemory
        - --registry=txt
        - --txt-owner-id=k3s
        - --policy=sync
        - --annotation-filter=kubernetes.io/ingress.class=nginx
        - --txt-prefix=ext-dns-
        - --log-level=info
